Patient Profile done

--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,6 +1,6 @@
 {
   "name": "asaangll",
-  "app_id": "",
+  "app_id": "006b89e7",
   "type": "ionic-angular",
   "integrations": {
     "cordova": {}
